# unix_book_code

./: .gitignore  README.md  gc_gitcommit.sh  gp_gitpush.sh  push_git.bat
apue/include/: apue.h
apue/lib/: CMakeLists.txt  env.c  lockreg_14.3.c  locktest_14.3.c  openmax.c  pathalloc.c  prmask_10.12.c  setfl_3.14.c  signal_10.14.c  signalintr_10.14.c  system_10.18.c  system_8.13.c  systest2_10.18.c  tellwait.c  tellwait_10.16.c
apue/src/: CMakeLists.txt
apue/src/10/: CMakeLists.txt  abort_10.17.c  child_10.7.c  critical_10.13.c  mask_10.15.c  read1_10.10.c  read2_10.10.c  reenter_10.6.c  setops_10.11.c  sigtstp_10.21.c  sigusr_10.3.c  sleep1_10.10.c  sleep2_10.10.c  suspend1_10.16.c  suspend2_10.16.c  tsleep2_10.10.c
apue/src/11/: CMakeLists.txt  badexit2_11.5.c  barrier_11.6.8.c  cleanup_11.5.c  condvar_11.6.6.c  exitstatus_11.5.c  mutex1_11.6.1.c  mutex2_11.6.2.c  mutex3_11.6.2.c  rwlock_11.6.4.c  threadid_11.4.c  timedlock_11.6.3.c
apue/src/12/: CMakeLists.txt  atfork_12.9.c  detach_12.3.c  getenv1_12.5.c  getenv2_12.5.c  getenv3_12.6.c  suspend_12.8.c  timeout_12.4.1.c
apue/src/7/: CMakeLists.txt  doatexit_7.3.c  testjmp_7.10.c
apue/src/8/: CMakeLists.txt  awkexample  echoall_8.10.c  exec1_8.10.c  exec2_8.12.c  fork1_8.3.c  fork2_8.6.c  nice_8.16.c  pruids_8.13.c  system_8.13.c  systest1_8.13.c  systest3_8.13.c  tellwait1_8.9.c  tellwait2_8.9.c  times1_8.17.c  vfork1_8.4.c  vfork3_C-8.c  zombie_C-10.c
c++_eff_modern/: CMakeLists.txt
c++_eff_modern/src/1/: CMakeLists.txt  term1_array.cpp  term1_array.hpp  term1_func.cpp  term3-1_decltype.cpp  term3-1_decltype.hpp  term3-2_decltype.cpp  term3-2_decltype.hpp
c++_effective/: build.sh
c++_primer/: CMakeLists.txt
c++_templates/: CMakeLists.txt  build.sh
c++_templates/src/: CMakeLists.txt
c++_templates/src/1/: CMakeLists.txt  max1_1.1.1.hpp  max1_1.1.2.cpp  max2_1.5.cpp  max3ref_1.5.cpp  max3val_1.5.cpp  max4_1.5.cpp  maxauto_1.3.2.hpp  maxcommon_1.3.3.hpp  maxconstexpr_1.6.3.hpp  maxdecltype_1.3.2.hpp  maxdecltypedecay_1.3.2.hpp  maxdefault1_1.4.hpp  maxdefault2_1.4.hpp  maxdefault3_1.5.hpp
c++_templates/src/2/: CMakeLists.txt  deduce1_2.9.cpp  deduce2_2.9.cpp  deduce2_2.9.hpp  deduce3_2.9.cpp  deduce3_2.9.hpp  friend2_2.4.hpp  friend3_2.4.hpp  friend_2.4.hpp  polymer1_2.10.cpp  polymer1_2.10.hpp  stack1_2.1.hpp  stack1test_2.2.cpp  stack2_2.5.hpp  stack3_2.7.hpp  stack3test_2.7.cpp  stackpartspec_2.6.hpp  using1_2.8.cpp  using1_2.8.hpp
c++_templates/src/3/: CMakeLists.txt  addvalue_3.2.cpp  addvalue_3.2.hpp  limit_3.3.cpp  limit_3.3.hpp  message_3.4.cpp  message_3.4.hpp  stackauto_3.4.cpp  stackauto_3.4.hpp  stacknontype_3.1.cpp  stacknontype_3.1.hpp
c++_templates/src/4/: CMakeLists.txt  foldtraverse_4.2.cpp  sizeof_4.1.3.cpp  test.cpp  varprint1_4.1.1.cpp  varprint1_4.1.1.hpp  varprint2_4.1.1.hpp  varprint2_4.1.2.cpp  varprint2_4.1.2.hpp  varprint_4.4.1.cpp  varprint_4.4.2.cpp  varprint_4.4.3.cpp  varusing_4.4.5.cpp
c++_templates/src/5/: CMakeLists.txt  arrays_5.4.cpp  arrays_5.4.hpp  boolstring_5.5.1.cpp  boolstring_5.5.1.hpp  difCompVarTemplate1_5.6.cpp  difCompVarTemplate1_5.6.hpp  difCompVarTemplate2_5.6.cpp  lambda_5.5.2.cpp  lessarray_5.4.cpp  lessarray_5.4.hpp  printcoll_5.1.hpp  stack5decl_5.5.cpp  stack5decl_5.5.hpp  stack6decl_5.5.cpp  stack6decl_5.5.hpp  stack7decl_5.5.cpp  stack7decl_5.5.hpp  stack8decl_5.7.1.cpp  stack8decl_5.7.1.hpp  stack8decl_5.7.cpp  stack8decl_5.7.hpp  stack9test_5.7.cpp  template_5.5.1.cpp  templateargs_5.7.cpp  this_5.3.cpp  vartemplate2_5.6.cpp  vartemplate_5.6.1.cpp  vartemplate_5.6.1.hpp  vartemplate_5.6.2.cpp  vartemplate_5.6.cpp  vartemplate_5.6.hpp
c++_templates/src/6/: CMakeLists.txt  constInfer_6.1.cpp  move1.1_6.1.cpp  move1.2_6.1.cpp  move1_6.1.cpp  specialmemtmpl1_6.2.cpp  specialmemtmpl2_6.2.cpp  specialmemtmpl2_6.2.hpp
effective_c++/src/: CMakeLists.txt
tlpi/: CMakeLists.txt
tlpi/include/: tlpi_hdr.h
tlpi/lib/: CMakeLists.txt  ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h
tlpi/src/: CMakeLists.txt
tlpi/src/42/: CMakeLists.txt  dynload_42.1.c  vis_comm_42.3.1.c  vis_comm_42.3.1.h  vis_f2_42.3.1.c
tlpi/src/42/42.3.1/: vis.map  vis_f1_42.3.1.c
tlpi/src/42/42.3.2/: sv_lib_v1.c  sv_lib_v2.c  sv_prog.c  sv_v1.map  sv_v2.map
tlpi/src/49/: CMakeLists.txt  anon_mmap_49.7.c  mmcat_49.2.c  t_mmap_49.4.2.c
unix环境高级编程(第三版)/: CMakeLists.txt  build.sh
unix环境高级编程(第三版)/lib/: CMakeLists.txt  openmax.c  pathalloc.c  prexit_8.6.c  setfl_3.14.c
unix环境高级编程(第三版)/src/: CMakeLists.txt
unix环境高级编程(第三版)/src/1/: CMakeLists.txt  hello_1.6.2.c  ls1.c  mycat_1.5.3.c  shell1_1.6.3.c  testerror_1.7.c
unix环境高级编程(第三版)/src/2/: CMakeLists.txt
unix环境高级编程(第三版)/src/2/2.5.4/: CMakeLists.txt  conf.c
unix环境高级编程(第三版)/src/3/: CMakeLists.txt  dupTest_3.12.c  fileflags_3.14.c  hole_3.6.c  nohole.c  nohole_3.6.c  seek_3.6.c  sus_lp64Offset.c
unix环境高级编程(第三版)/src/4/: CMakeLists.txt  ftw8_4.22.c  mycd_4.23.c  umask.4.8.c  unlink.4.15.c  zap.4.20.c
unix环境高级编程(第三版)/src/5/: CMakeLists.txt  buf_5.12.c  fgetsfputs_5.8.c  getcputc_5.8.c  memstr_5.14.c  tempfiles_5.13.c
unix环境高级编程(第三版)/src/6/: CMakeLists.txt  getpwsvr4_exercise.2.c
unix环境高级编程(第三版)/src/7/: CMakeLists.txt  cmd1_7.10.c  cmd2_7.10.c  echoarg_7.4.c  getrlimit_7.11.c
unix环境高级编程(第三版)/src/8/: CMakeLists.txt  exec1_8.10.c  fork1_8.3.c  fork2_8.6.c  wait1_8.6.c
unpv/: build.sh
unpv/lib/: CMakeLists.txt  error.c  readline.c  sock_ntop.c  sock_ntop_host.c  sock_set_addr.c  sock_set_port.c  wrapsock.c  wrapstdio.c  wrapunix.c
unpv/src/: CMakeLists.txt
unpv/src/5/: CMakeLists.txt  sigchldwait_5-7.c  sigchldwaitpid_5-11.c  tcpcli01_5-4.c  tcpcli04_5-9.c  tcpserv01_5-2.c  tcpserv01_5.9.c
unpv/src/6/: 6.11_tcpservpoll01.c  6.4_strcliselect01.c  6.4_tcpcli11.c  6.7_strcliselect02.c  6.7_tcpcli02.c  6.8_tcpservselect01.c  CMakeLists.txt
unpv1/: CMakeLists.txt  README.md
unpv1/src/1/: CMakeLists.txt  daytimetcpcli_1-5.c  daytimetcpsrv_1-9.c
unpv1/src/5/: 5.13_str_cli11.c  5.13_tcpcli11.c  CMakeLists.txt  sigchldwait_5-7.c  tcpserv04_5-12.c
unpv2/: README.md
(+63 files in other folders)
