#CHAPTER在shell中传入
if(CHAPTER STREQUAL "all") 
    add_subdirectory(1)
    add_subdirectory(2)
    # add_subdirectory(3)
    # add_subdirectory(4)
    # add_subdirectory(5)
    # add_subdirectory(6)
    # add_subdirectory(7)
    # add_subdirectory(8)
    # add_subdirectory(9)
    # add_subdirectory(10)
    # add_subdirectory(11)
    # add_subdirectory(12)
    # add_subdirectory(14)
elseif(CHAPTER STREQUAL "1")
    add_subdirectory(1)
elseif(CHAPTER STREQUAL "2")
    add_subdirectory(2)
elseif(CHAPTER STREQUAL "3")
    add_subdirectory(3)
elseif(CHAPTER STREQUAL "4")
    add_subdirectory(4)    
elseif(CHAPTER STREQUAL "5")
    add_subdirectory(5)
elseif(CHAPTER STREQUAL "6")
    add_subdirectory(6)
elseif(CHAPTER STREQUAL "7")
    add_subdirectory(7)
elseif(CHAPTER STREQUAL "8")
    add_subdirectory(8)
elseif(CHAPTER STREQUAL "9")
    add_subdirectory(9)    
elseif(CHAPTER STREQUAL "10")
    add_subdirectory(10)
elseif(CHAPTER STREQUAL "11")
    add_subdirectory(11)
elseif(CHAPTER STREQUAL "12")
    add_subdirectory(12)
elseif(CHAPTER STREQUAL "14")
    add_subdirectory(14)
endif()
