set(LIB_SRCS
        connect_nonb.c
        connect_timeo.c
        daemon_inetd.c
        daemon_init.c
        dg_cli.c
        dg_echo.c
        error.c
        get_ifi_info.c
        gf_time.c
        host_serv.c
        family_to_level.c
        mcast_leave.c
        mcast_join.c
        mcast_get_if.c
        mcast_get_loop.c
        mcast_get_ttl.c
        mcast_set_if.c
        mcast_set_loop.c
        mcast_set_ttl.c
        my_addrs.c
        read_fd.c
        readline.c
        readn.c
        readable_timeo.c
        rtt.c
        signal.c
        signal_intr.c
        sock_bind_wild.c
        sock_cmp_addr.c
        sock_cmp_port.c
        sock_ntop.c
        sock_ntop_host.c
        sock_get_port.c
        sock_set_addr.c
        sock_set_port.c
        sock_set_wild.c
        sockfd_to_family.c
        str_cli.c
        str_echo.c
        tcp_connect.c
        tcp_listen.c
        tv_sub.c
        udp_client.c
        udp_connect.c
        udp_server.c
        wraplib.c
        wrapsock.c
        wrapstdio.c
        wrappthread.c
        wrapunix.c
        write_fd.c
        writen.c
        writable_timeo.c
    )
#对象库
add_library(unp
            STATIC
            ${LIB_SRCS} 
            )