set (CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/4)
add_executable(varprint1_4.1.1
        varprint1_4.1.1.cpp)
add_executable(test
        test.cpp)
add_executable(varprint2_4.1.2
        varprint2_4.1.2.cpp)

add_executable(sizeof_4.1.3
        sizeof_4.1.3.cpp)

add_executable(varprint_4.4.1
        varprint_4.4.1.cpp)

add_executable(varprint_4.4.2
        varprint_4.4.2.cpp)