set (CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/5)
add_executable(this_5.3 this_5.3.cpp)
add_executable(lessarray_5.4 lessarray_5.4.cpp)
add_executable(arrays_5.4 arrays_5.4.cpp)
add_executable(stack5decl_5.5 stack5decl_5.5.cpp)
add_executable(stack6decl_5.5 stack6decl_5.5.cpp)
add_executable(stack7decl_5.5 stack7decl_5.5.cpp)
add_executable(boolstring_5.5.1 boolstring_5.5.1.cpp)
add_executable(template_5.5.1 template_5.5.1.cpp)
add_executable(lambda_5.5.2 lambda_5.5.2.cpp)
add_executable(vartemplate_5.6 vartemplate_5.6.cpp)
add_executable(difCompVarTemplate_5.6 difCompVarTemplate1_5.6.cpp difCompVarTemplate2_5.6.cpp)
add_executable(vartemplate2_5.6 vartemplate2_5.6.cpp)
