set (CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin/6)
add_executable(move1_6.1 move1_6.1.cpp)
add_executable(move1.1_6.1 move1.1_6.1.cpp)
add_executable(constInfer_6.1 constInfer_6.1.cpp)
add_executable(move1.2_6.1 move1.2_6.1.cpp)
add_executable(specialmemtmpl1_6.2 specialmemtmpl1_6.2.cpp)
add_executable(specialmemtmpl2_6.2 specialmemtmpl2_6.2.cpp)
